2013-08-20  Hans-Peter Nilsson  <hp@bitrange.com>

	* binutils-all/nm.exp: Xfail test for nm --size-sort for
	mmix-knuth-mmixware.

2013-08-19  Tristan Gingold  <gingold@adacore.com>

	* binutils-all/nm.exp: Add a test for nm --size-sort
	* binutils-all/nm-elf-1.s: New file.
	* binutils-all/nm-1.s: New file.

2013-05-31  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/i386/compressed-1b.d: Updated for text/data/bss
	section alignment change.
	* binutils-all/i386/compressed-1c.d: Likewise.
	* binutils-all/x86-64/compressed-1b.d: Likewise.
	* binutils-all/x86-64/compressed-1c.d: Likewise.

2013-05-28  Cary Coutant  <ccoutant@google.com>

	* binutils-all/dw2-1.W: Adjust expected output.
	* binutils-all/objdump.W: Likewise.
	* binutils-all/i386/compressed-1a.d: Likewise.
	* binutils-all/x86-64/compressed-1a.d: Likewise.

2013-05-02  Nick Clifton  <nickc@redhat.com>

	* readelf.exp: Expect -wi test to fail for the MSP430.

2013-05-01  Maciej W. Rozycki  <macro@codesourcery.com>

	* lib/binutils-common.exp (is_elf_format): Also exclude
	*-*-linux*ecoff*.

2013-02-26  Nick Clifton  <nickc@redhat.com>

	PR binutils/15191
	* binutils-all/readelf.n: Updare expected output from readelf.

2013-02-14  Maciej W. Rozycki  <macro@codesourcery.com>

	* binutils-all/mips/mixed-mips16.s: Add missing stack adjustment.
	* binutils-all/mips/mixed-mips16.d: Update accordingly.

2013-02-13  Maciej W. Rozycki  <macro@codesourcery.com>

	* binutils-all/mips/mixed-micromips.d: New test.
	* binutils-all/mips/mixed-mips16.d: New test.
	* binutils-all/mips/mixed-micromips.s: New test source.
	* binutils-all/mips/mixed-mips16.s: New test source.
	* binutils-all/mips/mips.exp: New file.

2012-12-17  Nick Clifton  <nickc@redhat.com>

	* binutils-all/windres/README: Add copyright notice.

2012-11-27  Roland McGrath  <mcgrathr@google.com>

	* lib/binutils-common.exp (is_zlib_supported): New function.
	* lib/utils-lib.exp (run_dump_test): If as options include